3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: repo2
          image: docker.io/soundaria05/plasma
          ports:
            - containerPort: 5000
              protocol: TCP
